--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>رزومه — ماجد</title>
+  <title>رزومه — ماجد برنامه نویس</title>
   <meta name="description" content="رزومه و پرتفولیو — توسعه‌دهنده Frontend / Fullstack">
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='0.9em' font-size='90'%3E%F0%9F%92%BB%3C/text%3E%3C/svg%3E">
   <style>
@@ -230,7 +230,7 @@
           <textarea name="message" placeholder="چطور می‌تونم کمکتون کنم؟" style="padding:10px;border-radius:10px;border:0;background:rgba(255,255,255,0.02);color:inherit;min-height:120px"></textarea>
           <div style="display:flex;gap:8px;justify-content:flex-end">
             <button type="submit" class="btn">ارسال</button>
-            <button type="button" class="ghost" id="clearForm">پاک کردن</button>
+            <button type="button" class="ghost" id="clearForm">پاک کردن همه</button>
           </div>
         </form>
       </div>
